--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,7 @@ input {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
+  text-transform: capitalize;
 }
 
 .hero-button {
@@ -196,5 +197,99 @@ input {
 
   .hero-title {
     margin: 0 auto 48px;
+  }
+}
+
+/* Feature section */
+.feature-section {
+  padding: 96px 0;
+}
+
+.feature-box-icon {
+  display: none;
+}
+
+.feature-list {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 72px;
+}
+
+.feature-li {
+  width: 288px;
+}
+
+.feature-title {
+  margin-bottom: 8px;
+  color: #2e2f42;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  text-align: center;
+}
+
+.feature-text {
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+@media screen and (min-width: 768px) {
+  .feature-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 72px;
+    column-gap: 24px;
+  }
+
+  .feature-li {
+    width: 356px;
+  }
+
+  .feature-title {
+    text-align: left;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .feature-section {
+    padding: 120px 0;
+  }
+
+  .feature-box-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 264px;
+    height: 112px;
+    padding: 24px 100px;
+    margin-bottom: 8px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+  }
+
+  .feature-list {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+  }
+
+  .feature-li {
+    width: 264px;
+  }
+
+  .feature-title {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+  }
+
+  .feature-text {
+    font-weight: 400;
   }
 }
