--- a/css/styles.css
+++ b/css/styles.css
@@ -116,7 +116,7 @@ input {
     display: none;
 }
 
-.burger-btn {
+.mobile-burger-btn {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -127,7 +127,7 @@ input {
   border: none;
 }
 
-.burger-btn-icon {
+.mobile-burger-btn-icon {
   fill: #2F2F37;
 }
 
@@ -149,7 +149,7 @@ input {
   opacity: 0;
 }
 
-.mobile-menu.is-open {
+.mobile-menu .is-open {
   visibility: visible;
   opacity: 1;
 }
@@ -242,6 +242,101 @@ input {
   fill: #F4F4FD;
 }
 
+@media only screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+
+  .header-nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .header .logo {
+    margin-right: 120px;
+  }
+  
+  .nav-items {
+    display: flex;
+    gap: 40px;
+  }
+  
+  .nav-items li:last-child {
+    margin-right: 0;
+  }
+
+  .nav-link {
+    position: relative;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    color: #2E2F42;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .nav-link:hover,
+  .nav-link:focus,
+  .contact-link:hover,
+  .contact-link:focus,
+  .nav-link.current {
+    color: #404BBF;
+  }
+
+  .nav-link.current::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    width: 100%;
+    height: 4px;
+    background-color: #404BBF;
+    border-radius: 2px;
+  }
+
+  .address-menu {
+    display: flex;
+    font-style: normal;
+  }
+
+  .contact-items {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+  }
+  
+  .contact-link {
+    color: #434455;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  
+  .mobile-burger-btn {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .header .logo {
+    margin-right: 76px;
+  }
+
+  .contact-items {
+    flex-direction: row;
+    gap: 40px;
+  }
+
+  .contact-link {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
+}
 
 /* Hero section */
 .hero-section {
