--- a/css/styles.css
+++ b/css/styles.css
@@ -99,12 +99,12 @@ input {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 18px;
-  padding-bottom: 18px;
 }
 
 .header .logo {
   display: inline-block;
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 
 .logo-header {
@@ -268,6 +268,7 @@ input {
 
   .nav-link {
     position: relative;
+    display: block;
     padding-top: 24px;
     padding-bottom: 24px;
     color: #2E2F42;
@@ -318,6 +319,7 @@ input {
   
   .mobile-burger-btn {
     display: none;
+    margin: 16px 0;
   }
 }
 
