Update background-color to scroll-btn

--- a/css/styles.css
+++ b/css/styles.css
@@ -979,7 +979,7 @@ input {
   border-radius: 50px;
   border: none;
   color: inherit;
-  background-color: #4d5ae5;
+  background-color: rgba(112, 103, 237, 0.5);
 }
 
 .scroll-btn:hover,
